seach and add function completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Directory_Demo</string>
+    <string name="title_activity_add__contacts_">Add_Contacts_Activity</string>
 </resources>
